# cortex_sdk_linux

./: CMakeLists.txt  clienttest.cpp  cortex.cpp  cortex.h
